[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Player/Player_Models/necromancer_idle_anim_f0.png" type="Texture" id=1]
[ext_resource path="res://Assets/Player/Player_Script/Catcher/Player_Catcher.gd" type="Script" id=2]
[ext_resource path="res://Assets/Player/Player_Script/Hitter/Hitter_Animation.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Player/Player_Script/Hitter/Player_Hitter_AniPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/baseball/script/Player_Bullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Player/Player_Weapons/Bat/Cross_Hair.png" type="Texture" id=14]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21, 22.125 )

[sub_resource type="Animation" id=5]
resource_name = "Damage"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Player_Model:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.23 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.796078, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="AnimationNodeStateMachinePlayback" id=3]

[sub_resource type="CapsuleShape2D" id=4]
radius = 16.015

[node name="Player_Catcher" type="KinematicBody2D"]
scale = Vector2( 0.999066, 1.00702 )
collision_mask = 2
script = ExtResource( 2 )
jump_height = 100.0
jump_time_to_peak = 0.3
jump_time_to_descent = 0.4
ball = ExtResource( 5 )
Bullet_Damage = 1
Bullet_Speed = 200

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7.875 )
shape = SubResource( 2 )

[node name="Player_Model" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Player" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
visible = false
position = Vector2( 0, 3 )
shape = SubResource( 2 )

[node name="AnimationPlayer" parent="." instance=ExtResource( 4 )]
root_node = NodePath("..")
anims/Damage = SubResource( 5 )

[node name="AnimationTree" parent="." instance=ExtResource( 3 )]
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 3 )
parameters/Walking/blend_position = Vector2( -0.00420612, 0.396552 )

[node name="offset" type="Sprite" parent="."]

[node name="Catch_Area" type="Area2D" parent="offset"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="offset/Catch_Area"]
position = Vector2( 62.5608, 2.17713e-08 )
rotation = 1.5708
shape = SubResource( 4 )

[node name="Cross_Hair" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 14 )
offset = Vector2( 250, 0 )

[node name="Position2D" type="Position2D" parent="Cross_Hair"]
position = Vector2( 248, 0 )

[node name="catch_cooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="throw_cooldown" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="area_entered" from="Player" to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="catch_cooldown" to="." method="_on_catch_cooldown_timeout"]
[connection signal="timeout" from="throw_cooldown" to="." method="_on_throw_cooldown_timeout"]
